Fix spacing and table

--- a/src/components/objectives/objectives.css
+++ b/src/components/objectives/objectives.css
@@ -1,3 +1,5 @@
-Button{
-    outline-color: red !important;
+
+.currency{
+    background: rgb(59,69,162);
+background: linear-gradient(180deg, rgba(59,69,162,1) 0%, rgba(44,94,176,1) 46%, rgba(22,31,59,1) 100%);
 }
